rnsc/test_data/integration/error/parser/type_hints/fieldref/no_operand_2_recovers.rns
.class   @fieldref MyClass



badabadaboom ; <- still reported